--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-publish = "/build"
-base="/"
-command = "npm run build"
+  publish = "dist"
+  base = "Frontend"
+  command = "npm run build"
 
 [[redirects]]
-from = "/"
-to = "/index.html"
-status = 200
+  from = "/*"
+  to = "/index.html"
+  status = 200
